syntax = "proto3";

package core.v1;
option go_package = "github.com/deni12345/dae-services/proto/gen/corev1;corev1";

import "common.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

message OrderLineOption {
  string group_id = 1;   // from MenuOptionGroup.id
  string option_id = 2;  // from MenuOption.id
  string title = 3;      // snapshot of the option title at order time
  Money price_delta = 4; // snapshot surcharge for ONE unit of this option
  int32 quantity = 5;
}

message OrderLine {
  string menu_item_id = 1;
  string name = 2;    // snapshot menu item title
  int32 quantity = 3; // item count

  Money order_base_price = 4;    // snapshot of MenuItem.base_price
  Money order_options_total = 5; // sum(option.price_delta * option.quantity)
  Money order_total = 6; // (unit_base_price + unit_options_delta) * quantity

  repeated OrderLineOption options = 7;
  string note = 8;
}

message Order {
  string id = 1;
  string sheet_id = 2;
  string user_id = 3;
  repeated OrderLine lines = 4;

  Money subtotal = 5;
  Money total = 6;
  string note = 7;

  google.protobuf.Timestamp create_at = 20;
  google.protobuf.Timestamp updated_at = 21;
}

message ListOrdersFilter {
  string sheet_id = 1 [(validate.rules).string = {min_len: 1}]; // required
  string user_id = 3 [(validate.rules).string = {min_len: 1}];
  google.protobuf.Timestamp since = 4; // updated since (optional)
}

service OrdersService {
  rpc CreateOrder(CreateOrderReq) returns (CreateOrderResp);
  rpc UpdateOrder(UpdateOrderReq) returns (UpdateOrderResp);
  rpc GetOrder(GetOrderReq) returns (GetOrderResp);
  rpc ListOrders(ListOrdersReq) returns (ListOrdersResp);

  // Realtime stream for a sheet's orders.
  // rpc StreamOrders(StreamOrdersRequest) returns (stream
  // StreamOrdersResponse);
}

message OrderLineOptionReq {
  string group_id = 1 [(validate.rules).string = {min_len: 1}];  // from MenuOptionGroup.id
  string option_id = 2 [(validate.rules).string = {min_len: 1}]; // from MenuOption.id
  int32 quantity = 3 [(validate.rules).int32 = {gt: 0}];
}

message OrderLineReq {
  string menu_item_id = 1 [(validate.rules).string = {min_len: 1}];
  int32 quantity = 2 [(validate.rules).int32 = {gt: 0}]; // item count
  repeated OrderLineOptionReq options = 3 [(validate.rules).repeated = {min_items: 0}];
  string note = 4 [(validate.rules).string = {max_len: 500}];
}

message CreateOrderReq {
  string idempotency_key = 1 [(validate.rules).string = {min_len: 1}]; // dedupe client retries
  string sheet_id = 2 [(validate.rules).string = {min_len: 1}];
  repeated OrderLineReq lines = 4 [(validate.rules).repeated = {min_items: 1}];
  string user_id = 5 [(validate.rules).string = {min_len: 1}];
  string note = 7 [(validate.rules).string = {max_len: 500}];
}
message CreateOrderResp { Order order = 1; }

message UpdateOrderReq {
  string id = 1 [(validate.rules).string = {min_len: 1}];
  repeated OrderLineReq lines = 2 [(validate.rules).repeated = {min_items: 1}];
  optional string note = 4 [(validate.rules).string = {max_len: 500}];
}
message UpdateOrderResp { Order order = 1; }

message GetOrderReq { string id = 1 [(validate.rules).string = {min_len: 1}]; }
message GetOrderResp { Order order = 1; }

message ListOrdersReq {
  int32 page_size = 1 [(validate.rules).int32 = {gte: 1, lte: 100}];
  Cursor cursor = 2;
  ListOrdersFilter filter = 3;
}
message ListOrdersResp {
  repeated Order orders = 1;
  optional Cursor next_cursor = 2;
}